# AIBoxSample

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
sample_aibox/: build.gradle
sample_aibox/src/androidTest/java/com/segway/robot/sample/aibox/: ExampleInstrumentedTest.java
sample_aibox/src/main/: AndroidManifest.xml
sample_aibox/src/main/cpp/: AlgoApplePerception.cpp  AlgoApplePerception.h  ApplePerception.cpp  CMakeLists.txt  VisionNative.cpp  VisionNative.h
sample_aibox/src/main/cpp/dependency/3rdparty_android/opencv-3.4.0_shared_arm/include/opencv2/: opencv_modules.hpp
sample_aibox/src/main/cpp/dependency/3rdparty_android/opencv-3.4.0_shared_arm/share/OpenCV/: OpenCV.mk
sample_aibox/src/main/cpp/dependency/3rdparty_android/opencv-3.4.0_shared_arm/share/OpenCV/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
sample_aibox/src/main/cpp/dependency/3rdparty_android/rapidjson/: rapidjson.h
sample_aibox/src/main/cpp/include/: ApplePerception.h  sidewalk_perception.h
sample_aibox/src/main/java/com/segway/robot/sample/aibox/: DetectedResult.java  MainActivity.java  VisionImageView.java  VisionNative.java
sample_aibox/src/main/res/layout/: activity_main.xml
sample_aibox/src/main/res/values/: strings.xml
sample_aibox/src/test/java/com/segway/robot/sample/aibox/: ExampleUnitTest.java
sample_vision/: build.gradle
sample_vision/src/androidTest/java/com/segway/robot/sample/vision/: ExampleInstrumentedTest.java
sample_vision/src/main/: AndroidManifest.xml
sample_vision/src/main/java/com/segway/robot/sample/vision/: MainActivity.java
sample_vision/src/main/res/layout/: activity_main.xml
sample_vision/src/main/res/values/: strings.xml
sample_vision/src/test/java/com/segway/robot/sample/vision/: ExampleUnitTest.java
